--- a/codigo/style.css
+++ b/codigo/style.css
@@ -25,9 +25,9 @@ body {
 }
 
 h1 {
-  espaçamento entre letras :  1 px ;
+  letter-spacing: 1px;
   margin: 0;
-  color: #000;
+  color: #2e75cc;
 }
 
 h3 {
@@ -38,48 +38,48 @@ h3 {
 
 h4 {
   margin: 0;
-  transformação de texto : maiúsculas;
+  text-transform: uppercase;
 }
 
 .inc-exp-container {
   background-color: #fff;
-  box-shadow: var( - sombra da caixa );
+  box-shadow: var(--box-shadow);
   padding: 20px;
   display : flex;
-  justify-content: espaço entre;
+  justify-content: space-between;
   margin: 20px 0;
 }
 
 .inc-exp-container > div {
-  flex :  1 ;
+  flex: 1;
   text-align: center;
 }
 
-.inc-exp-container >  div : first-of-type {
-  border:right: 1px solid #dedede;
+.inc-exp-container > div:first-of-type {
+  border-right: 1px solid #dedede;
 }
 
-.dinheiro {
+.money {
   font-size: 20px;
-  espaçamento entre letras :1px;
+  letter-spacing: 1px;
   margin: 5px 0;
 }
 
-.dinheiro .plus {
+.money.plus {
   color: #2ecc71;
 }
 
-.dinheiro.menos {
+.money.minus {
   color: #c0392b;
 }
 
-label{
+label {
   display: inline-block;
   margin: 10px 0;
 }
 
-input [ type='text' ] ,
-input [ type='número' ] {
+input[type='text'],
+input[type='number'] {
   border: 1px solid #dedede;
   border-radius: 2px;
   display: block;
@@ -91,9 +91,9 @@ input [ type='número' ] {
 .btn {
   cursor: pointer;
   background-color: #9c88ff;
-  box-shadow: var( - sombra da caixa );
+  box-shadow: var(--box-shadow);
   color:#fff;
-  fronteira : 0;
+  border: 0;
   display: block;
   font-size: 16px;
   margin: 10px 0 30px;
@@ -101,33 +101,33 @@ input [ type='número' ] {
   width: 100%;
 }
 
-.btn: foco,
-.delete-btn: focus {
-  esboço: 0;
+.btn:focus,
+.delete-btn:focus {
+  outline: 0;
 }
 
-.transações {
-  tipo de estilo de lista : none;
+.transactions{
+  list-style-type: none;
   padding: 0;
-  margin bottom:  40px;
+  margin-bottom: 40px;
 }
 
-.transações li{
+.transactions li {
   background-color: #fff;
-  box-shadow: var( - sombra da caixa );
-  color: #333 ;
+  box-shadow: var(--box-shadow);
+  color: #333;
   display: flex;
-  justify-content: espaço entre;
+  justify-content: space-between;
   position: relative;
   padding: 10px;
   margin: 10px 0;
 }
 
-.transações li.plus {
+.transactions li.plus {
   border-right: 5px solid #2ecc71 ;
 }
 
-.transações li.menos {
+.transactions li.minus {
   border-right: 5px solid #c0392b;
 }
 
@@ -142,11 +142,11 @@ input [ type='número' ] {
   position: absolute;
   top: 50%;
   left: 0;
-  transform: traduzir (-100%, -50%);
+  transform: translate(-100%, -50%);
   opacity: 0;
-  transition: opacity 0,3 s facility;
+  transition: opacity 0,3s ease;
 }
 
-.transações li :pairar .delete-btn {
+.transactions li:hover .delete-btn {
   opacity: 1;
 }
